--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv-safe": "^6.1.0",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
+    "helmet": "^3.18.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.9",
     "morgan": "~1.9.1",
-    "node-sass-middleware": "0.11.0"
+    "node-sass-middleware": "0.11.0",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
