project mvp finished

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ COOKIE_JWT="COOKIE_JWT"
 
 # JWT
 SECRET="SECRET"
+
+# MONGODB
+DBHOST="DBHOST"
+DBPORT="DBPORT"
+DBNAME="DBNAME"
+DBUSER="DBUSER"
+DBPASS="DBPASS"
