--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,16 +4,22 @@ services:
 
   mongo:
     image: mongo
+    command: [ --auth ]
     ports:
       - 27017:27017
+    volumes: 
+      - pew_mongodb:/data/db
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: passwd
 
   mongo-express:
     image: mongo-express
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: passwd
+
+volumes:
+  pew_mongodb:
