--- a/package.json
+++ b/package.json
@@ -6,20 +6,23 @@
     "mongo": "docker-compose -f docker/docker-compose.yml up -d",
     "start": "node ./app/bin/www",
     "dev": "nodemon ./app/bin/www",
-    "mongo|dev": "yarn mongo && yarn dev"
+    "mongo:dev": "yarn mongo && yarn dev"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv-safe": "^6.1.0",
     "express": "~4.16.1",
+    "handlebars-intl": "^1.1.2",
     "hbs": "~4.0.4",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.3",
+    "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.9",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
+    "serve-favicon": "^2.5.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
