--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,6 @@
 # APP
 PORT=3000
 
-#COOKIES
-COOKIE_USERNAME="COOKIE_USERNAME"
-COOKIE_JWT="COOKIE_JWT"
-
 # JWT
 SECRET="SECRET"
 
@@ -15,4 +11,4 @@ DBPORT="DBPORT"
 DBNAME="DBNAME"
 DBUSER="DBUSER"
 DBPASS="DBPASS"
-DBOPTIONS=""
+DBOPTIONS="DBOPTIONS"
