--- a/server/package.json
+++ b/server/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "@pew/server",
-  "version": "1.0.0",
-  "license": "MIT",
-  "main": "app/bin/www",
+  "name": "server",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "start": "node ./app/bin/www",
     "dev": "NODE_ENV=development nodemon ./app/bin/www",
-    "mongo:dev": "yarn mongo && yarn dev"
+    "lint": "eslint ."
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "handlebars-intl": "^1.1.2",
-    "hbs": "~4.0.4",
-    "helmet": "^3.18.0",
-    "http-errors": "~1.6.3",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.9",
+    "mongoose": "^5.6.3",
     "morgan": "~1.9.1",
-    "node-sass-middleware": "0.11.0",
-    "serve-favicon": "^2.5.0",
-    "validator": "^10.11.0"
+    "validator": "^11.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.2",
     "dotenv": "^8.0.0",
-    "nodemon": "^1.19.0"
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
+    "nodemon": "^1.19.1",
+    "yarn": "^1.16.0"
   }
 }
