--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,12 @@
     "build": "SASS_PATH=./node_modules webpack --config app/webpack/webpack.prod.js"
   },
   "dependencies": {
-    "@material/react-button": "^0.14.1",
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.5"
