--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "author": "Renan Batel <renanbatel@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "SASS_PATH=./node_modules webpack-dev-server --config app/webpack/webpack.dev.js",
-    "build": "SASS_PATH=./node_modules webpack --config app/webpack/webpack.prod.js"
+    "dev": "cross-env SASS_PATH=./node_modules webpack-dev-server --config app/webpack/webpack.dev.js",
+    "build": "cross-env SASS_PATH=./node_modules webpack --config app/webpack/webpack.prod.js"
   },
   "dependencies": {
     "@material/react-button": "^0.14.1",
@@ -28,6 +28,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.1.4",
+    "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "csso-loader": "^0.3.1",
     "file-loader": "^4.0.0",
